# pika

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  fly.pika-bot.toml  justfile
.github/workflows/: android-debug-apk.yml  android-debug.yml  marmotd-release.yml  pre-merge.yml
bots/: pi-bridge.py  pi-bridge.sh
cli/: Cargo.toml
cli/src/: main.rs  mdk_util.rs  microvm_spawner.rs  relay_util.rs
cli/src/agent/: harness.rs
crates/marmotd/: Cargo.toml
crates/marmotd/src/: daemon.rs  (+1 more)
crates/pika-bot/: Dockerfile.dockerignore  entrypoint.sh
crates/pika-desktop/: Cargo.toml
crates/pika-marmot-runtime/: Cargo.toml
crates/pika-server/: Cargo.toml
crates/pikachat-sidecar/: Cargo.toml
crates/vm-spawner/: Cargo.toml
crates/vm-spawner/src/: config.rs  main.rs  manager.rs  models.rs
docs/: microvm.md  pi-agent-rpc-parity.md  rmp-ci.md
infra/: justfile
infra/secrets/: README.md
ios/Bindings/: pika_core.swift
ios/Pika.xcodeproj/: project.pbxproj
ios/Sources/: AppManager.swift  ContentView.swift  PeerKeyValidator.swift  PreviewData.swift  ViewState.swift
ios/UITests/: PikaUITests.swift
nix/pi-agent/: package-lock.json  package.json
rust/: Cargo.toml
rust/src/: core.rs  lib.rs  mdk_support.rs  state.rs  updates.rs
rust/tests/: app_flows.rs
scripts/: bump-marmotd.sh  demo-agent-microvm.sh  post-release-announcement
todos/: marmot-followups-plan.md  marmot-refactor-plan.md
tools/: agent-device  interop-rust-baseline  ios-sim-ensure  qa-agent-device-smoke  run-android  run-ios
tools/agent-rpc-parity-ui/: agent-rpc-parity-ui.mjs
(+60 files in other folders)
