[workspace]
resolver = "2"
members = [
  "rust",
  "uniffi-bindgen",
  "cli",
  "crates/pika-media",
  "crates/pika-nse",
  "crates/pika-tls",
  "crates/marmotd",
  "crates/rmp-cli",
  "crates/pika-notifications",
]

[workspace.dependencies]
# Pin MDK once for the whole workspace to avoid version skew between members.
# (MDK is load-bearing for interop: MLS state formats, key package behavior, etc.)
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "d6cdd882fa16ec5e9fe53ade2e3c8f13db45cac0", features = ["mip04"] }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "d6cdd882fa16ec5e9fe53ade2e3c8f13db45cac0" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "d6cdd882fa16ec5e9fe53ade2e3c8f13db45cac0" }
