[package]
name = "vm-spawner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vm-spawner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.20", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
